--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.0.1",
+    "@arco-design/web-vue": "^2.56.3",
+    "@arco-plugins/vite-vue": "^1.4.5",
     "@tauri-apps/cli": "^2",
     "@unocss/eslint-config": "^65.4.3",
     "@unocss/eslint-plugin": "^65.4.3",
@@ -27,6 +29,8 @@
     "eslint-plugin-format": "^1.0.1",
     "typescript": "~5.6.2",
     "unocss": "^65.4.3",
+    "unplugin-auto-import": "^19.0.0",
+    "unplugin-vue-components": "^28.0.0",
     "vite": "^6.0.3",
     "vue-tsc": "^2.1.10"
   }
